# rusty-pick-em

./: .env  .gitignore  Cargo.toml  README.md  progress.md
front/: login.html
migrations/2017-12-03-010620_create_games/: up.sql
migrations/2018-06-11-143902_create_teams/: down.sql  up.sql
migrations/2018-06-12-093405_create_user/: up.sql
migrations/2018-06-13-130438_create_bet/: down.sql  up.sql
migrations/2018-06-15-201923_users_add_points/: down.sql  up.sql
migrations/2018-06-16-162932_bets_add_points/: down.sql  up.sql
src/: games.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  session.rs  user.rs
static/: games.css
templates/: game.html.hbs  games.html.hbs  header.html.hbs  login.html.hbs  test.html.hbs
vue/: README.md  package-lock.json  package.json
