[package]
name = "rusty-pick-em"
version = "0.1.0"
authors = ["Rémi Garde <remi.garde@free.fr>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
diesel = { version = "1.3", features = ["postgres", "chrono"] }
dotenv = "0.13"
chrono = "0.4"
ring = "0.11"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["handlebars_templates"]
