[package]
name = "rusty-pick-em"
version = "0.1.0"
authors = ["Rémi Garde <remi.garde@free.fr>"]

[dependencies]
rocket = { version = "0.3", features = ["tls"] }
rocket_codegen = "0.3"
diesel = { version = "1.3", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.13"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
ring = "0.11"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["handlebars_templates"]
