[package]
name = "rusty-pick-em"
version = "0.2.0"
authors = ["Rémi Garde <remi.garde@free.fr>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.13"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]
